syntax = "proto3";

package proto;
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";

service ReportService {
  rpc ListReports(ListReportsRequest) returns (ListReportResponse) {}
}


message ListReportsRequest {
  int64 page = 1;
  int64 size = 2;
}

message ListReportResponse {
  int64 total_count = 1;
  int64 total_pages = 2;
  int64 page = 3;
  int64 size = 4;
  bool has_more = 5;
  repeated Report reports = 6;
}

message Report {
  string id = 1;
  string topic = 2;
  google.protobuf.Timestamp created_time = 3;
  string report_data = 4;
}